Fix submission viewer feedback save modal window overflow issue
git-svn-id: https://coder.topcoder.com/tcs/clients/cronos/applications/direct/trunk@211364 fb370eea-3af6-4597-97f7-f7400a59c12a

--- a/src/web/css/submission_viewer.css
+++ b/src/web/css/submission_viewer.css
@@ -1251,3 +1251,10 @@
 .fullSizePic img{
 	border:1px solid #ccc;
 	}
+
+
+	.viewFeedbackContent{
+	 height:90px;
+	 overflow-y:scroll;	
+	 word-wrap:break-word;
+	}
